--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,62 @@
 .app {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  gap: 20px;
+  grid-template-areas: 
+  "header header"
+  "item item"
+  "item item";
   
+  justify-items: center;
+
+  padding: 20px 20px 0px 20px;
+
+  & > .header {
+    width: 100%;
+    grid-area: "header";
+    grid-column: header;
+    display: flex;
+    justify-content: center;
+
+    & > .title {
+      font-size: 30px;
+      line-height: 34px;
+      text-align: center;
+    }
+  }
+
+  & > .item {
+    max-width: 300px;
+    min-width: 200px;
+
+    height: 400px;
+    grid-area: "item";
+    cursor: pointer;
+    transition: box-shadow .3s;
+
+    & > .image {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    &:hover {
+      box-shadow: 0 0 11px rgba(33,33,33,.2);
+    }
+  }
+
+}
+
+@media (max-width: 630px) {
+
+  .app {
+    grid-template-areas: 
+    "header"
+    "item"
+    "item"
+    "item"
+    "item";
+  
+  }
 }
