--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,23 +8,23 @@
 
   <div class="item"
     (click)="openReplayDialog()">
-    <img class="image" src="/assets/images/melhores_momentos.png" width="100%">
+    <img class="image" src="./assets/images/melhores_momentos.png" width="100%">
 
   </div>
 
   <div class="item"
     (click)="openHistoryDialog()">
-    <img class="image" src="/assets/images/historico_na_copa.png" width="100%">
+    <img class="image" src="./assets/images/historico_na_copa.png" width="100%">
   </div>
 
   <div class="item"
     (click)="openInfoDialog()">
-    <img class="image" src="/assets/images/informações.png" width="100%">
+    <img class="image" src="./assets/images/informações.png" width="100%">
   </div>
 
   <div class="item"
     (click)="openAboutDialog()">
-    <img class="image" src="/assets/images/sobre_os_jogos.png" width="100%">
+    <img class="image" src="./assets/images/sobre_os_jogos.png" width="100%">
   </div>
 
 </div>
