--- a/src/app/history-dialog/history-dialog.component.html
+++ b/src/app/history-dialog/history-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="history">
-  <img src="assets/images/anos.png" width="100%">
+  <img src="./assets/images/anos.png" width="100%">
 
   <div mat-dialog-actions>
     <button mat-button mat-dialog-close color="primary">Fechar</button>
